objects/BP_TracksDegrees__c.object
<CustomObject><fields>
        <fullName>DegreeTrackEndDate__c</fullName>
        <label>Degree/Track End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>DegreeTrackStartDate__c</fullName>
        <label>Degree/Track Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ShowInOnlineApplicationSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, it will allow students to see and apply for this track/degree on our online application system.</inlineHelpText>
        <label>Show in Online Application System</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ywamlausannecomURL__c</fullName>
        <inlineHelpText>Full url to take the user directly to this track/degree on ywamlausanne.com</inlineHelpText>
        <label>ywamlausanne.com URL</label>
        <type>Url</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Tracks / Degrees</label><nameField>
        <label>Tracks / Degrees Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Tracks / Degrees</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>